--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,13 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+JWT_TTL=600
+JWT_SECRET=
+
+DROPBOX_ACCESS_TOKEN=
+DROPBOX_APP_KEY=
+DROPBOX_APP_SECRET=
